This commit allows changing protocol specific settings
1) Small uninitialized message was fixed in the module hardware.
2) Alignment errors in the webgui weather module where fixed.
3) Every protocol can now have specific settings that can alter
it's behavior. E.g. some dimmers can have 15 dimlevels, others
can have 8. Some weather stations communicate in 2 decimals
some with none. Etc. These settings can now be set inside each
protocol and when necessary be overriden by the user in the
config.json file. Check the wiki for protocol specific settings.
4) The webgui has been adapter so it's modularly adapts itself
to the protocol specific settings.
5) The daemon now differentiates between internal communicated
config settings and external settings. The "type" and "order"
settings will now only be used internally so there is no need
to set them inside the config.json. Also, only the overriden
protocol specific settings will be stored in the config.json.
This makes the config.json less bloated.

--- a/web/pilight.css
+++ b/web/pilight.css
@@ -21,17 +21,17 @@ div.ui-slider.ui-slider-switch {
 }
 
 div.temperature, div.humidity, div.battery.red, div.battery.green {
-	position: absolute;
+	position: relative;
 	float: right;
-	top: 8px;
 	padding: 4px;
+	right: -50px;
 }
 
 div.battery.red, div.battery.green {
-	right: 15px;
-	top: 14px;
 	width: 10px;
 	height: 16px;
+	top: 4px;
+	right: -60px;	
 }
 
 div.battery.red {
@@ -42,29 +42,21 @@ div.battery.green {
 	background: url('battery_green.png') 0px 0px no-repeat;
 }
 
-div.temperature {
-	right: 85px;
-}
-
-div.humidity {
-	right: 50px;
-}
-
 div.degrees, div.percentage {
-	position: absolute;
+	position: relative;
 	float: right;
 	font-size: 14px;
 	color: #aeaeae;
 }
 
 div.degrees {
-	top: 6px;
-	right: 80px;
+	top: -2px;
+	left: 48px;
 }
 
 div.percentage {
-	top: 15px;
-	right: 42px;
+	top: 5px;
+	left: 50px;
 }
 
 div.ui-slider {
