This commit add an update check and webgui ajax capabilities.
1. Since the introduction of the apt pilight repository, it's easier
to track updates. This commit adds and update checker against the
pilight apt repository. To know if updates are avaiable you can check
the webgui. This commit will also communicate the current running
version and the latest upstream version when requesting the config
through the API. You can easility compare the two to notify the user
for updates.

 2. The webserver has been optimized and more instability issues
have been fixed. This commit also adds two new functions. When
calling /config page, you can see the latest config json
object. When you call the /send page you can (url encoded) send
codes as specified in the pilight API. These new pages also allow
using the AJAX interface in the webgui. This makes the webgui also
work on older (mobile) devices and browsers.

--- a/web/pilight.css
+++ b/web/pilight.css
@@ -7,6 +7,13 @@ body {
 	width: 100%;
 }
 
+#version {
+	font-size: 10px;
+	margin: 0px;
+	position: relative;
+	float: left;
+}
+
 .ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
 	display: block;
 	padding: 12px 75px 14px 15px;
