--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -36,8 +36,8 @@ body {
 }
 
 div.webcam {
-/*	display: block;
-	padding: 15px 15px 15px 15px;*/
+	display: block;
+/*	padding: 15px 15px 15px 15px;*/
 }
 
 .ui-li.dimmer {
