--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -30,14 +30,14 @@ body {
 	font-size: 16px;
 }
 
+li.webcam.ui-li-static.ui-li {
+	display: block;
+	padding: 15px 15px 15px 15px;	
+}
+
 .ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
 	display: block;
 	padding: 15px 75px 14px 15px;
-}
-
-div.webcam {
-	display: block;
-/*	padding: 15px 15px 15px 15px;*/
 }
 
 .ui-li.dimmer {
