--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -58,7 +58,7 @@ div.ui-slider.ui-slider-switch {
 	margin: 6px 10px 10px 0px;
 }
 
-div.temperature, div.humidity, div.battery.red, div.battery.green, div.watt, div.price {
+div.temperature, div.humidity, div.battery.red, div.battery.green {
 	position: relative;
 	float: right;
 	padding: 4px;
@@ -80,7 +80,7 @@ div.battery.green {
 	background: url('battery_green.png') 0px 0px no-repeat;
 }
 
-div.degrees, div.percentage, div.wattios, div.coin {
+div.degrees, div.percentage {
 	position: relative;
 	float: right;
 	font-size: 14px;
@@ -92,7 +92,7 @@ div.degrees {
 	left: 48px;
 }
 
-div.percentage, div.wattios, div.coin {
+div.percentage {
 	top: 5px;
 	left: 50px;
 }
