--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -30,6 +30,17 @@ body {
 	font-size: 16px;
 }
 
+li.webcam.ui-li-static.ui-li {
+	display: block;
+	padding: 15px 15px 15px 15px;	
+}
+
+div.webcam img {
+	max-width:100% !important;
+	height:auto;
+	display:block;	
+}
+
 .ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
 	display: block;
 	padding: 15px 75px 14px 15px;
