--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -102,8 +102,8 @@ div.sunset_icon.blue {
 }
 
 div.temperature_icon, div.humidity_icon, 
-div.update_icon, div.action_icon,
-div.media_icon {
+div.update_active, div.update_inactive,
+div.action_icon, div.media_icon {
 	position: relative;
 	float: right;
 	font-size: 14px;
@@ -122,7 +122,7 @@ div.temperature_icon, div.humidity_icon {
 	left: 48px;
 }
 
-div.update_icon {
+div.update_active, div.update_inactive {
 	left: 55px;
 	width: 20px;
 	height: 20px;
@@ -137,8 +137,12 @@ div.humidity_icon {
 	background: url('humi.png') 0px 0px no-repeat;
 }
 
-div.update_icon {
-	background: url('update.png') 0px 0px no-repeat;
+div.update_active {
+	background: url('update_active.png') 0px 0px no-repeat;
+}
+
+div.update_inactive {
+	background: url('update_inactive.png') 0px 0px no-repeat;
 }
 
 div.action_icon.play {
