--- a/web/default/pilight.css
+++ b/web/default/pilight.css
@@ -1,91 +1,141 @@
-body {
-	margin: 0px;
+#header {
+	height: 41px;
+	font-weight: normal;
+	color: black;
 }
 
-#content div.content {
-	display: none;
-	width: 100%;
+
+#version, #proc {
+	position: absolute;
+	float: left;
+	font-size: 10px;
+	left: 4px;
+}
+
+#helpdlg {
+	background: #efefef;
+}
+
+.ui-loader-background {
+    width: 100%;
+    height: 100%;
+    top:0;
+    margin: 0;
+    background: rgba(0, 0, 0, 0.3);
+    display: none;
+    position: fixed;
+    z-index: 100;
+}
+
+.ui-loading .ui-loader-background {
+    display:block;
 }
 
 #version {
-	font-size: 10px;
-	margin: 0px;
-	padding-left: 3px;
-	position: aboslute;
-	height: 15px;
-	top: 0px;
-	left: 0px;
-	overflow: hidden;
+	top: 5px;
 }
 
 #proc {
-	font-size: 10px;
-	margin: 0px;
-	padding-left: 3px;
-	position: aboslute;
-	height: 15px;
-	top: 10px;
-	left: 0px;
-	overflow: hidden;
+	top: 20px;
 }
 
-#header {
-	height: 40px;
+.ui-li-static {
+	height: 27px;
+	padding: 5px 0px 5px 0px;
 }
 
-#header h1 {
-	margin-top: -15px;
+.dimmer {
+	height: 70px;
 }
 
-.heading {
-	font-size: 16px;
+.ui-slider {
+    position: relative;
+    top: 25px;
+	width: 100%;
+}
+
+.slider-value {
+    position: absolute;
+	float: left;
+	left: 10px;
+}
+
+div.ui-slider-switch, div.screen {
+    position: absolute;
+    right: 10px;
+}
+
+div.screen {
+	right: -20px;
+	top: -10px;
+	width: 140px;
 }
 
 .ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
-	display: block;
-	padding: 15px 75px 14px 15px;
+    display: block;
 }
 
-.ui-li.dimmer {
-	padding: 15px 75px 1px 15px;
+div.name {
+	padding-top: 4px;
+    position: relative;
+	float: left;
 }
 
-div.ui-slider.ui-slider-switch {
-	position: absolute;
+div.humidity, div.temperature,
+div.temperature_icon, div.humidity_icon,
+div.update_active, div.update_inactive,
+div.sunrise, div.sunset, div.sunset_icon.gray,
+div.sunrise_icon.gray, div.sunset_icon.blue,
+div.sunrise_icon.yellow, div.media_icon, div.action_icon,
+div.battery.red, div.battery.green,
+div.datetime {
+    position: relative;
 	float: right;
-	right: 0px;
-	width: 100px;
-	margin: 6px 10px 10px 0px;
-}
-
-.pendingsw.pending .ui-slider-label {
-	background: #FF9900;
-}
-
-div.datetime, div.temperature, div.humidity, div.battery.red, div.update,
-div.battery.green, div.sunrise, div.sunset, div.sunset_icon.gray,
-div.sunrise_icon.gray, div.sunset_icon.blue, div.sunrise_icon.yellow,
-div.media_icon, div.action_icon{
-	position: relative;
-	float: right;
-	padding: 4px;
-	right: -50px;
+	padding: 6px 0px 0px 0px;
 }
 
 div.battery.red, div.battery.green {
-	width: 10px;
-	height: 16px;
-	top: 4px;
-	right: -60px;
+	margin: 6px 0px 0px 0px;
 }
+
 
 div.sunset_icon.gray, div.sunrise_icon.gray,
 div.sunset_icon.blue, div.sunrise_icon.yellow  {
 	width: 19px;
 	height: 16px;
-	top: 0px;
-	right: -50px;
-	padding: 0;
+	margin-right: 4px;
+}
+
+div.temperature_icon, div.humidity_icon {
+	width: 16px;
+	height: 16px;
+	margin-right: 4px;
+}
+
+div.update_active, div.update_inactive,
+div.media_icon, div.action_icon {
+	width: 20px;
+	height: 20px;
+}
+
+div.update_active, div.update_inactive {
+	margin: 7px 0px 0px 4px;
+}
+
+div.media_icon, div.action_icon {
+	margin: 5px 10px 0px 4px;
+}
+
+div.battery.red, div.battery.green {
+	width: 10px;
+	height: 16px;
+}
+
+div.webcam_image {
+	position: absolute;
+	float: right;
+	right: 10px;
+	top: 14px;
 }
 
 div.battery.red {
@@ -110,34 +160,6 @@ div.sunset_icon.gray {
 
 div.sunset_icon.blue {
 	background: url('sunset_blue.png') 0px 0px no-repeat;
-}
-
-div.temperature_icon, div.humidity_icon,
-div.update_active, div.update_inactive,
-div.action_icon, div.media_icon {
-	position: relative;
-	float: right;
-	font-size: 14px;
-	color: #aeaeae;
-	width: 16px;
-	height: 16px;
-}
-
-div.action_icon, div.media_icon {
-	width: 20px;
-	height: 20px;
-}
-
-div.temperature_icon, div.humidity_icon {
-	top: -2px;
-	left: 48px;
-}
-
-div.update_active, div.update_inactive {
-	left: 55px;
-	width: 20px;
-	height: 20px;
-	top: 2px;
 }
 
 div.temperature_icon {
@@ -194,42 +216,4 @@ div.media_icon.episode {
 
 div.media_icon.song {
 	background: url('song.png') 0px 0px no-repeat;
-}
-
-div.screen {
-	position: relative;
-	float: right;
-	width: 135px;
-	height: 0px;
-	top: -25px;
-	right: -100px;
-}
-
-div.webcam_image {
-	position: absolute;
-	float: right;
-	right: 20px;
-	top: 14px;
-}
-
-.ui-loader-background {
-    width:100%;
-    height:100%;
-    top:0;
-    padding: 0;
-    margin: 0;
-    background: rgba(0, 0, 0, 0.3);
-    display:none;
-    position: fixed;
-    z-index:100;
-}
-
-.ui-loading .ui-loader-background {
-    display:block;
-}
-
-.ui-disabled {
-	filter: Alpha(Opacity=75);
-	opacity: .7;
-	zoom: 1;
 }
