--- a/libs/webgui/default/pilight.css
+++ b/libs/webgui/default/pilight.css
@@ -17,14 +17,14 @@
 }
 
 .ui-loader-background {
-    width: 100%;
-    height: 100%;
-    top:0;
-    margin: 0;
-    background: rgba(0, 0, 0, 0.3);
-    display: none;
-    position: fixed;
-    z-index: 100;
+	width: 100%;
+	height: 100%;
+	top:0;
+	margin: 0;
+	background: rgba(0, 0, 0, 0.3);
+	display: none;
+	position: fixed;
+	z-index: 100;
 }
 
 .ui-loading .ui-loader-background {
@@ -49,8 +49,8 @@
 }
 
 .pendingsw .ui-btn {
-    position: absolute;
-    top: 0px;
+	position: absolute;
+	top: 0px;
 	right: 0px;
 	height: 15px;
 	padding-top: 6px;
@@ -108,18 +108,18 @@
 }
 
 .ui-btn-right {
-    position: absolute;
+	position: absolute;
 	top: 2px;
 }
 
 .ui-slider {
-    position: relative;
-    top: 25px;
+	position: relative;
+	top: 25px;
 	width: 100%;
 }
 
 .slider-value {
-    position: absolute;
+	position: absolute;
 	float: left;
 	left: 10px;
 }
@@ -129,6 +129,28 @@ div.ui-slider-switch, div.screen {
 	right: 10px;
 }
 
+li.label .text {
+	position: absolute;
+	right: 0px;
+	margin: 2px 5px 0px 5px;
+	color: black;
+}
+
+li.label .marquee {
+	right: 15px;
+	position: relative;
+	float: right;
+	overflow: hidden;
+	font-weight: normal;
+	text-align: right;
+	width: 50%;
+	padding: 4px 5px 0px 5px;
+	white-space: nowrap;
+	height: 25px;
+	-moz-border-radius: 4px 4px 4px 4px;
+	border-radius: 4px 4px 4px 4px;	
+}
+
 div.screen {
 	right: -20px;
 	top: -10px;
@@ -136,12 +158,12 @@ div.screen {
 }
 
 .ui-li .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li {
-    display: block;
+	display: block;
 }
 
 div.name {
 	padding-top: 4px;
-    position: relative;
+  position: relative;
 	float: left;
 }
 
@@ -156,7 +178,7 @@ div.sunrise_icon.gray, div.sunset_icon.blue,
 div.sunrise_icon.yellow, div.media_icon, div.action_icon,
 div.battery.red, div.battery.green,
 div.datetime {
-    position: relative;
+	position: relative;
 	float: right;
 	padding: 6px 0px 0px 0px;
 }
