Break long names in multiple lines
Useful for small screens, i.e. smartphones

(cherry picked from commit ba03d9f28ca93b5e5c45ba92314d0e431245ec88)

--- a/libs/webgui/pilight.css
+++ b/libs/webgui/pilight.css
@@ -358,3 +358,8 @@ ul.ui-listview li.switch div.name {
 	overflow: auto;
 	float: right;
 }
+
+.ui-li-static {
+        height: auto;
+        min-height: 27px;
+}
