--- a/libs/webgui/pilight.css
+++ b/libs/webgui/pilight.css
@@ -363,3 +363,8 @@ ul.ui-listview li.switch div.name {
         height: auto;
         min-height: 27px;
 }
+
+.weather_values {
+	overflow: auto;
+	float: right;
+}
