Fix issue with dimmer to small
This addresses the issue that dimmers are not high enough as mentioned here:
https://github.com/pilight/pilight/commit/892289638dfa4edb6934e4c05a6bcb3ca16ad3ec#commitcomment-25587958
(cherry picked from commit d298c5a28e56e9d3edd4b0205e74d4b2ffebb10e)

--- a/libs/webgui/pilight.css
+++ b/libs/webgui/pilight.css
@@ -353,3 +353,8 @@ ul.ui-listview li.switch div.name {
         padding-right: 95px;
         white-space: normal;
 }
+
+.weather_values {
+	overflow: auto;
+	float: right;
+}
