Added bgcolor option and migrated label action to lua
- In addition to the blink option, added background color option
- Updated pilight.css and pilight.js to support background color
- Original PR was still based on actions written in C. Migrated the
label action to lua.

--- a/libs/webgui/pilight.css
+++ b/libs/webgui/pilight.css
@@ -144,6 +144,7 @@ li.label .text {
 	position: relative;
 	right: 0px;
 	color: black;
+	background-color: transparent;
 	margin: 2px 5px 0px 5px;
 	animation-name: none;
 	animation-duration: .75s;
@@ -152,6 +153,7 @@ li.label .text {
 }
 
 li.label .marquee {
+	background-color: transparent;
 	right: 15px;
 	position: relative;
 	float: right;
